welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: identifier expected but string literal found.
	if (bis:Int>="3") {
                     ^Poucet:17: error: ')' expected but '}' found.
} while (croisement()=="true")
^