welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var bis:Int = 0
while (estSurBiscuit) {
	avance()
	bis = bis + 1
}
do { 
	if (bis:Int>="3") {
		gauche()
		avance()
	}
	if (bis:Int<="2") {
		droite()
		avance()
	}
	
} while (croisement()=="true")
